--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             );
             fbq("init", "1037320100731834");
             fbq("track", "PageView");
+            fbq("track", "ViewContent");
         </script>
     </head>
     <body>
