--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             );
             fbq("init", "1037320100731834");
             fbq("track", "PageView");
-            fbq("track", "ViewContent");
+            fbq("track", "ViewContent", {
+                content_name: "DevOps Semarang",
+            });
         </script>
     </head>
     <body>
